--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,13 @@ __pycache__
 */__pycache__
 */*/__pycache__
 registration/multiCorres_sync_dfaust1k/multi_condor/*
-data/DfT4D/full_global_w_normal_obj
-data/DfT4D/partial_2
-data/DfT4D/partial_global_w_normal_obj
+data/
 old_work_dir/
 work_dir/
+seq006_work_dir/
+seq000_work_dir/
+seq003_work_dir/
+RGBD_work_dir/
+work_dir_my_dataset/
+kfusion_snoopy_work_dir/
+kfusion_duck_work_dir
